Name:                astar-bizzle
Version:             1.2
Cabal-version:       >=1.16.0
License:             BSD3
License-File:        LICENSE.txt
Author:              Jason Bertsche
Maintainer:          jason.bertsche@gmail.com
Homepage:            http://github.com/TheBizzle
Category:            Demo
Synopsis:            A toy implementation of A*
Description:         A toy implementation of A*
Build-type:          Simple

source-repository head
  type:     git
  location: git@github.com:TheBizzle/AStar-Haskell.git

library
  hs-source-dirs:   src
  exposed-modules:  AStar.AStarData, AStar.AStarLike, AStar.Heuristic
  default-language: Haskell2010
  build-depends:
    array           >= 0.4,
    base            >= 4.6 && < 5,
    containers      >= 0.5,
    heap            >= 1.0,
    mtl             >= 2.2,
    pathfindingcore >= 1.2
  GHC-Options:
    -Wall
    -fno-warn-name-shadowing

test-suite tests
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  default-language: Haskell2010
  build-depends:
    array             >= 0.4,
    astar-bizzle      >= 1.2,
    base              >= 4.6 && < 5,
    containers        >= 0.5,
    HUnit             >= 1.2,
    lame-tester       >= 1.2,
    lens              >= 4.3,
    pathfindingcore   >= 1.2,
    semigroups        >= 0.9,
    tasty             >= 0.10,
    tasty-hunit       >= 0.9,
    validation        >= 0.3
