Name:                astar-bizzle
Version:             0.1.0
Cabal-version:       >=1.16.0
License:             BSD3
License-File:        LICENSE.txt
Author:              Jason Bertsche
Maintainer:          jason.bertsche@gmail.com
Homepage:            http://github.com/TheBizzle
Category:            Demo
Synopsis:            A toy implementation of A*
Description:         A toy implementation of A*
Build-type:          Simple

source-repository head
  type:     git
  location: git@github.com:TheBizzle/AStar-Haskell.git

library
  hs-source-dirs:   src
  exposed-modules:  AStar.AStarData, AStar.AStarLike, AStar.Heuristic
  default-language: Haskell2010
  build-depends:
    array           >= 0.4,
    base            >= 4.6 && < 5,
    containers      >= 0.5,
    heap            >= 1.0,
    mtl             >= 2.2,
    pathfindingcore >= 0.1.16
  GHC-Options:
    -Wall
    -fno-warn-name-shadowing

test-suite tests
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  default-language: Haskell2010
  build-depends:
    array                      >= 0.4,
    astar-bizzle               >= 0.1.0,
    base                       >= 4.6 && < 5,
    containers                 >= 0.5,
    HUnit                      >= 1.2,
    lame-tester                >= 0.2.2,
    lens                       >= 4.3,
    pathfindingcore            >= 0.1.16,
    semigroups                 >= 0.9,
    test-framework             >= 0.8,
    test-framework-hunit       >= 0.3,
    validation                 >= 0.3
